# kcoreaddons

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5CoreAddonsConfig.cmake.in  KF5CoreAddonsMacros.cmake  KF6CoreAddonsConfig.cmake.in  KF6CoreAddonsMacros.cmake  QLoggingCategories.cmake  README.md  conanfile.py  metainfo.yaml
autotests/: CMakeLists.txt  ConfigureChecks.cmake  alwaysunloadplugin.cpp  alwaysunloadplugin.h  config-tests.h.in  desktoptojsontest.cpp  filesystemmetadatawritertest.cpp  jsonplugin.cpp  jsonplugin.h  jsonplugin.json  jsonplugin2.cpp  jsonplugin2.h  jsonplugin2.json  kaboutdataapplicationdatatest.cpp  kaboutdatatest.cpp  kautosavefiletest.cpp  kautosavefiletest.h  kcompositejobtest.cpp  kcompositejobtest.h  kcompoundjobtest.cpp  kcompoundjobtest.h  kdelibs4configmigratortest.cpp  kdelibs4migrationtest.cpp  kdirwatch_benchmarktest.cpp  kdirwatch_test_utils.h  kdirwatch_unittest.cpp  kfileutilstest.cpp  kfileutilstest.h  kformatqmltest.cpp  kformatqmltest.qml  kformattest.cpp  kformattest.h  kfuzzymatchertest.cpp  kfuzzymatchertest.h  kjobtest.cpp  kjobtest.h  klibexectest.cpp  klistopenfilesjobtest_unix.cpp  klistopenfilesjobtest_unix.h  klistopenfilesjobtest_win.cpp  (+47 more)
autotests/data/: fakeplugin.desktop  hiddenplugin.desktop  org.kde.coreaddons.test-app.metainfo.xml  org.kde.coreaddons.test-app.xml  os-release  testmetadata.json  twostepsparsetest.desktop
autotests/data/servicetypes/: bad-groups-input.desktop  bad-groups-servicetype.desktop  bool-servicetype.desktop  example-input.desktop  example-servicetype.desktop  fake-kdedmodule.desktop  fake-kdevelopplugin.desktop  invalid-missing-servicetype.desktop
autotests/plugin/: CMakeLists.txt  kpluginclass.cpp  kpluginfactorytest.cpp  kpluginmetadatatest.cpp  plugins.cpp  plugins.h  pluginwithoutmetadata.cpp  qtplugin.cpp  statickpluginclass.cpp  statickpluginclass_2.cpp  statickpluginclass_3.cpp  staticpluginwithoutmetadata.cpp  widgetsplugin.cpp
autotests/plugin/data/: jsonplugin.json  jsonplugin2.json
cmake/: FindFAM.cmake  FindProcstat.cmake  FindSharedMimeInfo.cmake  rules_PyKF5.py
docs/: Doxyfile.local  qloggingcategories.md
python/: CMakeLists.txt  bindings.h  bindings.xml  typesystem_kcoreaddons.xml
src/: CMakeLists.txt  Messages.sh
src/desktoptojson/: CMakeLists.txt  desktoptojson.cpp  desktoptojson.h  main.cpp
src/kpluginindexer/: CMakeLists.txt  kpluginindexer.cpp  kpluginindexer.h  main.cpp
src/lib/: CMakeLists.txt  kaboutdata.cpp  kaboutdata.h  kcoreaddons-index.qdoc  kcoreaddons.cpp  kcoreaddons.h  kcoreaddons.qdoc  kcoreaddons.qdocconf
src/lib/caching/: ksdclock.cpp  ksdclock_p.h  ksdcmapping_p.h  ksdcmemory.cpp  ksdcmemory_p.h  kshareddatacache.cpp  kshareddatacache.h  kshareddatacache_p.h  kshareddatacache_win.cpp  posix_fallocate_mac.h
src/lib/io/: config-kdirwatch.h.cmake  config-kfilesystemtype.h.cmake  dbustypes_p.h  filesystemmetadata.cpp  filesystemmetadata.h  kautosavefile.cpp  kautosavefile.h  kbackup.cpp  kbackup.h  kdirwatch.cpp  kdirwatch.h  kdirwatch_p.h  kdirwatch_win.cpp  kfilesystemtype.cpp  kfilesystemtype.h  kfilesystemtype_p.cpp  kfilesystemtype_p.h  kfileutils.cpp  kfileutils.h  kmessage.cpp  kmessage.h  knetworkmounts.cpp  knetworkmounts.h  knetworkmounts_p.h  kprocess.cpp  kprocess.h  kprocess_p.h  kurlmimedata.cpp  kurlmimedata.h  kurlmimedata_p.h  org.freedesktop.portal.FileTransfer.xml  xattr_p.h  xattr_p_unix.h  xattr_p_unsupported.h  xattr_p_win.h
src/lib/jobs/: kcompositejob.cpp  kcompositejob.h  kcompositejob_p.h  kcompoundjob.cpp  kcompoundjob.h  kcompoundjob_p.h  kjob.cpp  kjob.h  kjob_p.h  kjobtrackerinterface.cpp  kjobtrackerinterface.h  kjobuidelegate.cpp  kjobuidelegate.h  ksequentialcompoundjob.cpp  ksequentialcompoundjob.h  ksequentialcompoundjob_p.h  ksimplesequentialcompoundjob.h
src/lib/licenses/: CMakeLists.txt  licenses.qrc
src/lib/plugin/: desktopfileparser.cpp  desktopfileparser.h  desktopfileparser_p.h  kexportplugin.h  kpluginfactory.cpp  kpluginfactory.h  kpluginfactory_p.h  kpluginloader.cpp  kpluginloader.h  kpluginmetadata.cpp  kpluginmetadata.h  kpluginmetadata.schema.json  kpluginmetadata.schema.json.license  kstaticpluginhelpers.cpp  kstaticpluginhelpers.h  kstaticpluginhelpers_p.h
src/lib/randomness/: krandom.cpp  krandom.h  krandomsequence.cpp  krandomsequence.h
src/lib/text/: kemoticonsparser.cpp  kemoticonsparser_p.h  kfuzzymatcher.cpp  kfuzzymatcher.h  kjsonutils.cpp  kjsonutils.h  kmacroexpander.cpp  kmacroexpander.h  kmacroexpander_p.h  kmacroexpander_unix.cpp  kmacroexpander_win.cpp  kstringhandler.cpp  kstringhandler.h  ktexttohtml.cpp  ktexttohtml.h  ktexttohtml_p.h  ktexttohtmlemoticonsinterface.h
src/lib/util/: config-accountsservice.h.cmake  config-getgrouplist.h.cmake  config-kde4home.h.cmake  config-util.h.cmake  kdelibs4configmigrator.cpp  kdelibs4configmigrator.h  kdelibs4migration.cpp  kdelibs4migration.h  kexpected.cpp  kexpected.h  kformat.cpp  kformat.h  kformatprivate.cpp  kformatprivate_p.h  klibexec.cpp  klibexec.h  klistopenfilesjob.h  klistopenfilesjob_unix.cpp  klistopenfilesjob_win.cpp  kmemoryinfo.cpp  kmemoryinfo.h  kosrelease.cpp  kosrelease.h  kprocesslist.cpp  kprocesslist.h  kprocesslist_p.h  kprocesslist_unix.cpp  kprocesslist_unix_procstat.cpp  kprocesslist_unix_procstat_p.h  kprocesslist_win.cpp  kruntimeplatform.cpp  kruntimeplatform.h  ksandbox.cpp  ksandbox.h  kshell.cpp  kshell.h  kshell_p.h  kshell_unix.cpp  kshell_win.cpp  ksignalhandler.cpp  (+12 more)
src/mimetypes/: CMakeLists.txt  XmlMessages.sh  kde5.xml  kde6.xml
src/qml/: CMakeLists.txt  formats.cpp  formats.h  kcoreaddonsplugin.cpp  kcoreaddonsplugin.h  kcoreaddonsqml.qdoc  kcoreaddonsqml.qdocconf  kosreleaseproxy.cpp  kosreleaseproxy.h  kuserproxy.cpp  kuserproxy.h  sandbox.cpp  sandbox.h  types.h
tests/: CMakeLists.txt  faceicontest.cpp  faceicontest.h  formats.qml  kdirwatchtest.cpp  kdirwatchtest.h  kdirwatchtest_gui.cpp  kdirwatchtest_gui.h  kosrelease.qml  krandomsequencetest.cpp  ktexttohtmltest.cpp  kuser.qml  texttohtml.qml
(+557 files in other folders)
